--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<h1>Meow</h1>
-	<img src="/image/cat.jpg"/>
+	<img src="/image/cat.jpg", width="800px", height="450px">
 </body>
 </html>
