--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<title>The first personal Website</title>
 </head>
-<body>
-	<h1>Meow</h1>
+<body style="background-color: ivory">
+	<h1 text-align=center>Meow</h1>
 	<img src="/image/cat.jpg", width="800px", height="450px">
 </body>
 </html>
