--- a/index.html
+++ b/index.html
@@ -2,17 +2,23 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>The first personal Website</title>
-	<style>
-		img {
-			display: block;
-			margin:0 auto;
-		}
-	</style>
+	<title>Home-Personal Website</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body style="background-color: ivory">
-	<h1 align="center" background-color="red">Meow</h1>
-	<img src="image/cat.jpg" width="800px" height="450px" alt="cat">
+<body>
+	<div id="header">
+		<div>
+		<h1>Meow</h1>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="pet.html">Pet</a></li>
+				<li><a href="shop.html">Shop</a></li>
+      		</ul>
+		</div>
+	</div>
+	
+	
+		<img src="image/cat.jpg" width="1600px" height="900px" alt="cat">
 	
 </body>
 </html>
