--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html class="gr__"><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta charset="utf-8">
 	<title>Home-Personal Website</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="index_files/style.css">
 </head>
-<body>
-	<div id="header">
-		<div>
-		<h1>Meow</h1>
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="pet.html">Pet</a></li>
-				<li><a href="shop.html">Shop</a></li>
+<body data-gr-c-s-loaded="true">
+	<div id="header">		
+  <h1>Meow</h1><ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="pet.html">Pet</a></li>
+			<li><a href="shop.html">Shop</a></li>
+<li style="float: right;color: pink;"><a href="contact.html">Contact Us</a></li>
       		</ul>
+
 		</div>
-	</div>
 	
 	
-		<img src="image/cat.jpg" width="1600px" height="900px" alt="cat">
+		<img src="index_files/cat.jpg" alt="cat" width="1600px" height="900px">
 	
-</body>
-</html>
+
+</body></html>
