--- a/index.html
+++ b/index.html
@@ -7,17 +7,25 @@
 </head>
 <body data-gr-c-s-loaded="true">
 	<div id="header">		
-  <h1>Meow</h1><ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="pet.html">Pet</a></li>
-			<li><a href="shop.html">Shop</a></li>
-<li style="float: right;color: pink;"><a href="contact.html">Contact Us</a></li>
-      		</ul>
-
+	<a href="index.html"><img id="title" alt="Pet Diaries." src="index_files/title.png"></a>
+			<div>
+			
+			
+			
+      
+<ul>
+			<li class="tab"><a href="index.html">Home</a></li>
+			<li class="tab"><a href="shop.html">Shop</a></li>
+<li class="tab" style="float: right;"><a class="active" href="contact.html">Contact Us</a></li>
+      		<div></div></ul></div>
 		</div>
 	
 	
-		<img src="index_files/cat.jpg" alt="cat" width="1600px" height="900px">
+		
 	
 
-</body></html>
+<div id="main_body">
+<img class="blog" alt="cat" src="index_files/cat.jpg" width="960px" height="540px">
+<div class="txt">
+  <h2>About Us</h2>
+  </div></div></body></html>
