--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       
 <ul>
 			<li class="tab"><a href="index.html">Home</a></li>
+			<li class="tab"><a href="pet.html">Pet</a></li>
 			<li class="tab"><a href="shop.html">Shop</a></li>
 <li class="tab" style="float: right;"><a class="active" href="contact.html">Contact Us</a></li>
       		<div></div></ul></div>
@@ -25,7 +26,7 @@
 	
 
 <div id="main_body">
-<img class="blog" alt="cat" src="index_files/cat.jpg" width="960px" height="540px">
+<img class="blog" alt="cat" src="index_files/cat-min.jpg" width="960px" height="540px">
 <div class="txt">
   <h2>About Us</h2>
   </div></div></body></html>
