--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Home-Personal Website</title>
 	<link rel="stylesheet" type="text/css" href="index_files/style.css">
+<link rel="stylesheet" type="text/css" href="index_files/header.css">
 </head>
 <body data-gr-c-s-loaded="true">
 	<div id="header">		
